--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,20 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
   {% include head.html %}
 
-  <body>
+<body>
 
-    {% include header.html %}
-
-    <div class="page-content">
-      <div class="wrapper">
+<div class="container">
         {{ content }}
-      </div>
-    </div>
+</div>
 
     {% include footer.html %}
-
-  </body>
-
+</body>
 </html>
