--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
   <footer class="footer">
     <div class="container">
-      <p>2014 Fudsquare. All Rights Reserved.</p>
+      <p class="copyright">2014 Fudsquare. All Rights Reserved.</p>
     </div>
   </footer>
