--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,6 @@
   <footer class="footer">
     <div class="container">
-      <p class="copyright">2014 Fudsquare. All Rights Reserved.</p>
+      <hr>
+      <p class="copyright">&copy; 2014 Fudsquare. All Rights Reserved.</p>
     </div>
   </footer>
