--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,15 @@
   <footer class="footer">
     <div class="container">
       <hr>
-      <p class="copyright">&copy; 2014 Fudsquare. All Rights Reserved.</p>
+      <div class="row">
+        <div class="col-xs-6">
+          <img src="http://placehold.it/171x36?text=Logo">
+          <p class="copyright">&copy; 2014 Fudsquare. All Rights Reserved.</p>
+        </div>
+        <div class="col-xs-6">
+          <img src="http://placehold.it/40x40?text=f" class="img-circle pull-right" alt="Facebook">
+          <img src="http://placehold.it/40x40?text=t" class="img-circle pull-right" alt="Twitter">
+        </div>
+      </div>
     </div>
   </footer>
