--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,13 +3,35 @@
       <hr>
       <div class="row">
         <div class="col-xs-6">
-          <img src="http://placehold.it/171x36?text=Logo">
+          <img src="{{ site.baseurl }}/images/logo.png">
           <p class="copyright">&copy; 2014 Fudsquare. All Rights Reserved.</p>
         </div>
         <div class="col-xs-6">
           <img src="http://placehold.it/40x40?text=f" class="img-circle pull-right" alt="Facebook">
           <img src="http://placehold.it/40x40?text=t" class="img-circle pull-right" alt="Twitter">
+          <p>&nbsp;<br>&nbsp;<br>&nbsp;<br>&nbsp;<br>&nbsp;<br></p>
         </div>
       </div>
     </div>
   </footer>
+
+<nav class="navbar navbar-inverse navbar-fixed-bottom" style="color:white;">
+  <div class="container-fluid">
+    <div class="col-xs-3">
+         <span class = "hidden-xs">xs</span>
+         <span class = "visible-xs">✔ xs</span>
+    </div>
+    <div class="col-xs-3">
+         <span class = "hidden-sm">sm</span>
+         <span class = "visible-sm">✔ sm</span>
+    </div>
+    <div class="col-xs-3">
+         <span class = "hidden-md">md</span>
+         <span class = "visible-md">✔ md</span>
+    </div>
+    <div class="col-xs-3">
+         <span class = "hidden-lg">lg</span>
+         <span class = "visible-lg">✔ lg</span>
+    </div>
+  </div>
+</nav>
