--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,24 +1,40 @@
+---
+title: CSSstylesheet
+---
+
 .sales {
-  background-image: url("http://placehold.it/980x150?text=Tea Service");
+  background-image: url("{{ site.baseurl }}/images/TeaService.png");
   background-position: center;
-  background-size: 100%;
+  background-size: cover;
+  color:white;
 }
 .order {
-  background-image: url("http://placehold.it/980x450?text=Wood Texture");
-  background-repeat: no-repeat;
+  background-image: url("{{ site.baseurl }}/images/WoodGrain.jpg");
+  background-repeat: repeat;
   background-position: center;
   background-size: 100%;
+  color:white;
 }
 .learn {
-  background-image: url("http://placehold.it/980x500?text=Person on Computer------------------");
+  background-image: url("{{ site.baseurl }}/images/PersonLaptop.png");
   background-repeat: no-repeat;
   background-position: center;
-  background-size: 100%;
+  background-size: cover;
+  height: 30em;
 }
 
 .points {
   background-color: rgb(2, 144, 90);
   color:white;
+}
+
+.points div {
+  padding-top: 3em;
+  padding-bottom: 3em;
+}
+
+a {
+  color: #02905a;
 }
 
 .btn.btn-flat {
@@ -44,4 +60,9 @@
     color: #333333;
     background-image:none;
     border-color: #FFFFFF #FFFFFF #FFFFFF;
+}
+.btn-success, .btn-success:hover {
+  color: #ffffff;
+  background-color: #02905a;
+  border-color: #02774a;
 }
