Viewport sizer tweaks

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,19 +2,22 @@
 
 <nav class="navbar navbar-inverse navbar-fixed-bottom" style="color:white;">
   <div class="container-fluid">
-    <div class="col-xs-3">
-         <span class = "hidden-xs">xs</span>
-         <span class = "visible-xs">✔ xs</span>
+    <div class="col-xs-4 text-right">
+         Bootstrap Viewport Size:
     </div>
-    <div class="col-xs-3">
+      <div class="col-xs-2">
+           <span class = "hidden-xs">xs</span>
+           <span class = "visible-xs">✔ xs</span>
+      </div>
+    <div class="col-xs-2">
          <span class = "hidden-sm">sm</span>
          <span class = "visible-sm">✔ sm</span>
     </div>
-    <div class="col-xs-3">
+    <div class="col-xs-2">
          <span class = "hidden-md">md</span>
          <span class = "visible-md">✔ md</span>
     </div>
-    <div class="col-xs-3">
+    <div class="col-xs-2">
          <span class = "hidden-lg">lg</span>
          <span class = "visible-lg">✔ lg</span>
     </div>
